[gd_scene load_steps=6 format=1]

[ext_resource path="res://HFSMs/driver.gd" type="Script" id=1]
[ext_resource path="res://HFSMs/scenes/HFSM.tscn" type="PackedScene" id=2]
[ext_resource path="res://HFSMs/scripts/states/w_left.gd" type="Script" id=3]
[ext_resource path="res://HFSMs/scripts/states/w_right.gd" type="Script" id=4]
[ext_resource path="res://HFSMs/img/icon.png" type="Texture" id=5]

[node name="root" type="Node"]

script/script = ExtResource( 1 )

[node name="HFSM" parent="." instance=ExtResource( 2 )]

FSM = NodePath("")
initial_state = "agent_walk"

[node name="agent_walk" parent="HFSM" instance=ExtResource( 2 )]

FSM = NodePath("..")
initial_state = "w_right"

[node name="w_left" type="Node" parent="HFSM/agent_walk"]

script/script = ExtResource( 3 )

[node name="w_right" type="Node" parent="HFSM/agent_walk"]

script/script = ExtResource( 4 )

[node name="agent_wait" parent="HFSM" instance=ExtResource( 2 )]

FSM = NodePath("..")
initial_state = null

[node name="Timer" type="Timer" parent="HFSM/agent_wait"]

process_mode = 1
wait_time = 3.0
one_shot = true
autostart = false

[node name="agent" type="Sprite" parent="."]

transform/pos = Vector2( 522, 279 )
texture = ExtResource( 5 )

[node name="l_goal" type="Position2D" parent="."]

transform/pos = Vector2( 190, 279 )

[node name="r_goal" type="Position2D" parent="."]

transform/pos = Vector2( 831, 273 )

[node name="Button" type="Button" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 424.0
margin/top = 469.0
margin/right = 577.0
margin/bottom = 489.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "wait"
flat = false

[connection signal="enter" from="HFSM/agent_wait" to="HFSM/agent_wait/Timer" method="start"]

[connection signal="timeout" from="HFSM/agent_wait/Timer" to="HFSM" method="change_state" binds= [ "agent_walk", true ]]

[connection signal="pressed" from="Button" to="HFSM" method="change_state" binds= [ "agent_wait", true ]]


